Friday, 22nd August, James Turner <james@worldforge.org>

	* Rename configure.in to configure.ac, since we require the newer
	  version. This stops some autoconf versions moaning about the name,
	  and helps scripts which detect which autoconf to run by
	  examining configure.in
	* Also add an AC_PREREQ, just for paranoia's sake.
	* Fix autogen.sh for the new name

Sunday, 17th August, Ron Steinke <rsteinke@w-link.net>

	* Eris/UIFactory.*: Fixes to UI code for change
	  to atlas-transitional.

Monday, 11th August, James Turner <james@worldforge.org>

	* Fix a dumb bug I introduced in June, in handling server-
	  commaned LOGOUTs. Essentially, I failed to pickup the
	  anonymous ClassDispatcher below :op:, and hence was
	  dispatching Player::recvRemoteLogout for every op
	  recived. Solution is too create an anonymous ClassDispatcher
	  ourselves, pending a re-think of anonymous dispatchers
	  at some point in the future.
	  
	  Thanks to Al Riddoch for the catch.

Monday, 11th August, Al Riddoch <alriddoch@zepler.org>

	* Eris/PollDefault.cpp, Eris/PollDefault.h: Fix more incorrect mangling
	  of Poll by conversion script.

Saturday, 9th August, Al Riddoch <alriddoch@zepler.org>

	* Switch all the build files over to using 1.2 API suffix.

	* bindings/polls/glib/PollGlib.h, bindings/polls/glib/PollGlibFD.h,
	  bindings/polls/glib/PollGlibSource.h: Fixed some incorrect
	  mangling of Poll by the Atlas-C++ conversion script.

Saturday, 9th August, James Turner <james@worldforge.org>

	* Convert to Atlas-C++ transitional API. Do not use unless
	  you know what you're doing. Arrr!
	* Also convert to skstream-0.3 and require wfmath 0.3

Tuesday, 22nd July 2003, Ron Steinke <rsteinke@w-link.net>

	* Added UI Factory code, based on the new experimental
	  Janus UI Atlas entities. You need the experimental
	  janus branch of Atlas-C++ to compile it, so it's
	  wrapped in a nice-freindly ./configure check.

Monday, 23rd June 2003, Al Riddoch <alriddoch@zepler.org>
