@@ -25,7 +25,7 @@ public:
 class Poll : public SigC::Signal1<void,PollData&>
 {
 public:
-	Poll() : new_timeout_(false) {}
+	Poll() {}
 	virtual ~Poll() {}
 
 	enum Check {
@@ -41,13 +41,13 @@ public:
 	static Poll& instance();
 	static void setInstance(Poll*);
 
-	void newTimeout() {new_timeout_ = true;}
+	static void newTimeout() {new_timeout_ = true;}
 
 private:
 	Poll(const Poll&);
 	static Poll *_inst;
 protected:
-	bool new_timeout_;
+	static bool new_timeout_;
 };
 
 } // namespace Eris
